Updated latest changes
