# src/main/java/com/bt/marketplace/partnercredentials/model/Credentials.java
@@ -3,7 +3,6 @@ package com.bt.marketplace.partnercredentials.model;
 import com.bt.marketplace.partnercredentials.controller.common.ValidationMessage;
 import lombok.Builder;
 import lombok.Data;
-import lombok.NoArgsConstructor;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotBlank;
@@ -12,14 +11,11 @@ import javax.validation.constraints.Size;
 
 @Builder
 @Data
-public class PartnerCredentialRequest {
-
-    @NotBlank(message = ValidationMessage.MSG_DSCR_MUST_NOT_BE_EMPTY)
-    private String isvId;
-
-    @NotBlank(message = ValidationMessage.MSG_DSCR_MUST_NOT_BE_EMPTY)
-    private String customerId;
+public class Credentials {
+    private String tenetId;
+    private String userId;
+    private String locationId;
 
     @Valid
-    private Credentials credentials;
+    private OrganisationSecrets organisationSecrets;
 }
